<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Gainsboro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="333dp"
            android:layout_height="161dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/marginTop"
            android:background="@drawable/border_shadow" />

        <TextView
            android:id="@+id/texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/texto"
            android:textSize="16sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginBottom="@dimen/marginBottom"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/edtTexto"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

            <ImageButton
                android:id="@+id/btnEnviar"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:src="@android:drawable/ic_menu_upload" />
        </LinearLayout>


        <TextView
            android:id="@+id/tamanhoLetra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/tamanhoLetra"
            android:textSize="16sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBarTamanho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop" />

        <TextView
            android:id="@+id/estilo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/estilo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginBottom="@dimen/marginBottom"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/negrito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negrito" />

            <CheckBox
                android:id="@+id/italico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/italico" />

            <CheckBox
                android:id="@+id/maiusculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maiusculo" />
        </LinearLayout>

        <TextView
            android:id="@+id/corLetra"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/corLetra"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rdgSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/azul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/azul" />

            <RadioButton
                android:id="@+id/vermelho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/vermelho" />

            <RadioButton
                android:id="@+id/verde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verde" />
        </RadioGroup>

    </LinearLayout>

</ScrollView>